Fix: Extract embedded images from notebooks and update references for website deployment

--- a/1-langgraph Basics/7-ReActAgents.ipynb
+++ b/1-langgraph Basics/7-ReActAgents.ipynb
@@ -18,7 +18,7 @@
     "2. observe - pass the tool output back to the model\n",
     "3. reason - let the model reason about the tool output to decide what to do next (e.g., call another tool or just respond directly)\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](images/image.png)"
    ]
   },
   {
@@ -639,7 +639,7 @@
     "\n",
     "All we need to do is simply compile the graph with a checkpointer, and our graph has memory!\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](images/image.png)"
    ]
   },
   {
