--- a/2-langgraph advance/1-streaming.ipynb
+++ b/2-langgraph advance/1-streaming.ipynb
@@ -189,7 +189,7 @@
     "- **values** : This streams the full state of the graph after each node is called.\n",
     "- **updates** : This streams updates to the state of the graph after each node is called.\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](images/image.png)"
    ]
   },
   {
