--- a/4- Workflows/1-prompting_chaining.ipynb
+++ b/4- Workflows/1-prompting_chaining.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "5. Iterate if Needed: LangGraph supports conditional logic and loops, so you can revisit earlier nodes or adjust the flow based on intermediate results.\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "![image.png](images/image.png)\n",
     "\n"
    ]
   },
