--- a/4- Workflows/2-parallelization.ipynb
+++ b/4- Workflows/2-parallelization.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "LangGraph handles this implicitly when nodes are independent and can leverage multi-threading or asynchronous execution under the hood, depending on the runtime environment (e.g., Python’s asyncio or a multi-threaded executor).\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](images/image.png)"
    ]
   },
   {
