--- a/4- Workflows/4-orchestrator-worker.ipynb
+++ b/4- Workflows/4-orchestrator-worker.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "When to use this workflow: This workflow is well-suited for complex tasks where you can’t predict the subtasks needed (in coding, for example, the number of files that need to be changed and the nature of the change in each file likely depend on the task). Whereas it’s topographically similar, the key difference from parallelization is its flexibility—subtasks aren't pre-defined, but determined by the orchestrator based on the specific input.\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](images/image.png)"
    ]
   },
   {
