--- a/4- Workflows/5-Evaluator-optimizer.ipynb
+++ b/4- Workflows/5-Evaluator-optimizer.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "When to use this workflow: This workflow is particularly effective when we have clear evaluation criteria, and when iterative refinement provides measurable value. The two signs of good fit are, first, that LLM responses can be demonstrably improved when a human articulates their feedback; and second, that the LLM can provide such feedback. This is analogous to the iterative writing process a human writer might go through when producing a polished document.\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](images/image.png)"
    ]
   },
   {
