fix: add titles to promptingstartegies and promptstatergies notebooks

--- a/9-Q&A WITH GRAPHDB/promptingstartegies.ipynb
+++ b/9-Q&A WITH GRAPHDB/promptingstartegies.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d654dfd6",
+   "metadata": {},
+   "source": [
+    "# Prompting Strategies\n",
+    "\n",
+    "This notebook demonstrates various prompting strategies for querying Neo4j graph databases."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5f6a0922",
