--- a/9-Q&A WITH GRAPHDB/promptstatergies.ipynb
+++ b/9-Q&A WITH GRAPHDB/promptstatergies.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prompt Strategies\n",
+    "\n",
+    "This notebook demonstrates prompt engineering strategies for generating accurate Cypher queries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
